# train_cal

./: .gitignore  0504输入与管线路资料差异分析.md  1_接口文档.md  AGENTS.md  README.md  app.py  fzed_shunting_solver_guide.md  point(2).json  pyproject.toml  sitecustomize.py  换长.xlsx  接口文档.md  段内车型换长.xlsx  现场布局图.drawio  现场布局图.pptx  福州东调车业务说明.md  福州东调车求解器最佳实践方案.md  福州东车辆段业务说明.md  调车钩计划算法需求说明书_输入0504.xlsx  附件3：福州东车辆段段内管线路简表（新）0504.docx
data/master/: areas.json  business_rules.json  physical_routes.json  (+5 more)
docs/: architecture.md  external-validation-baseline.md  fuzhou-east-business-coverage-matrix.md  fzed-shunting-current-algorithm-flow.md  fzed-shunting-spot-vehicle-handling.md  l7-stage1-3-workflow-explained.md  move_candidates_guide.md  note.md  railwaystation-shunting-logic-implementation-explained.md  solver-deep-dive.md  solver-logic-explained.md
fzed_shunting/: __init__.py
scripts/: analyze_capacity_release_truth_tails.py  analyze_depot_late_bench.py  analyze_front_search_diagnostics.py  analyze_l7_phase1234_results.py  analyze_phase1_backbone_validation.py  analyze_phase1_front_metrics.py  analyze_phase1_workflow_failures.py  analyze_soft_target_truth_tails.py  evaluate_l7_phase123_diagnostics.py  evaluate_phase1_stage_hooks.py  evaluate_phase1_workflow_sets.py  evaluate_phase2_gate.py  evaluate_phase2_stage_hooks.py  evaluate_phase2_workflow_sets.py  evaluate_phase3_stage_hooks.py  evaluate_workflow_hook_sets.py  inspect_phase1_case.py  run_benchmark.py  run_external_validation_parallel.py  summarize_validation_run.py  verify_backtrack_12.py
tools/: cpsat_solver.py
(+394 files in other folders)
