[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fzed-shunting"
version = "0.1.0"
description = "Fuzhou East shunting solver and simulation toolkit"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.13",
  "networkx>=3.6",
  "typer>=0.20",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
